--- a/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.html
+++ b/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.html
@@ -1,7 +1,7 @@
 <div id="default-content" [ngStyle]="{'height': currentHeight + 'px'}">
     <div class="wrap-stick">
         <app-spinner *ngIf="showLoadingIndicator"></app-spinner>
-        <div *ngIf="!showLoadingIndicator">
+        <div *ngIf="!showLoadingIndicator" style="height: -webkit-fill-available;">
             <div class="desktop-image">
                 <img style="width: 100%; max-height: 240px;" src="https://weebet.s3.amazonaws.com/{{ SLUG }}/paginaPromocao/{{ exibirImagem }}" alt="">
             </div>
@@ -9,7 +9,7 @@
                 <h2>{{ promocao.promocaoNome }}</h2>
             </div>
 
-            <div class="content-body" style="height: -webkit-fill-available; min-height: 35vh" #content id="print-section">
+            <div class="content-body" style="margin-bottom: 32px;" #content id="print-section">
                 <div class="content" [innerHTML]="promocao.conteudo | safeHTML">
                 </div>
             </div>
