--- a/src/app/esportes/live/listagem/live-listagem.component.css
+++ b/src/app/esportes/live/listagem/live-listagem.component.css
@@ -15,6 +15,10 @@
     height: 45px;
 }
 
+.collapsed-header {
+    border-radius: 4px;
+}
+
 .esporte-header>span {
     line-height: 15px;
 }
@@ -34,9 +38,10 @@
     align-self: center;
 }
 
-.esporte.campeonatos {
-    padding: 5px;
-    background-color: var(--background-live);
+.esporte .campeonatos {
+    padding: 8px;
+    /* background-color: var(--background-live); */
+    background-color: rgba(var(--background-live), 50%);
 }
 
 .campeonato-header {
@@ -233,10 +238,13 @@
     display: flex;
     background-color: var(--game);
     padding: 7.5px;
+    min-width: 250px;
+    max-width: 280px;
 }
 
 .cotacoes .cotacao {
     display: flex;
+    flex: 1 1 0;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -260,6 +268,11 @@
 
 .cotacoes .cotacao label {
     margin: 0;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
 }
 
 .cotacoes .cotacao.disabled,
@@ -350,6 +363,11 @@
     .indentificacao .nome {
         padding-left: 0;
         width: calc(100% - 85px);
+    }
+
+    .cotacoes {
+        min-width: none;
+        max-width: none;
     }
 
     .cotacoes, .cotacoes .cotacao {
