--- a/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.css
+++ b/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.css
@@ -7,7 +7,7 @@
 
 .content,
 .content-header {
-    margin: auto 75px;
+    margin: auto 32px;
 }
 
 .content  {
@@ -26,14 +26,10 @@
 }
 .desktop-image img {
     border-radius: 10px;
+    height: 320px;
 }
 
 @media (max-width: 821px) {
-    .content,
-    .content-header {
-        margin: auto 32px;
-    }
-
     .desktop-image {
         margin: 20px 8px 24px 8px;
     }
@@ -48,6 +44,12 @@
 
     .desktop-image img {
         border-radius: 8px;
+    }
+}
+
+@media (max-width: 820px) {
+    .desktop-image img {
+        height: 222px;
     }
 }
 
