--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -26,7 +26,7 @@
                     <form [formGroup]="form" (ngSubmit)="onSubmit()">
                         <app-spinner *ngIf="submitting"></app-spinner>
                         <div class="row">
-                            <div class="col col-sm-3 saque-pix">
+                            <div class="col col-sm-3 col-lg-4 col-xl-3 saque-pix">
                                 <div class="form-group required">
                                     <div class="mt-3">
                                         <label class="label text-left">Chave Pix</label>
@@ -34,15 +34,16 @@
                                     <div class="mt-3">
                                         <div class="form-group">
                                             <select formControlName="tipoChavePix" class="form-control inverted-out" (change)="onChavePixChange()">
-                                                <option value="0" disabled>{{'geral.selecioneChavePix' | translate}}</option>
+                                                <option value="0" [selected]="true" disabled>{{'geral.selecioneChavePix' | translate}}</option>
                                                 <option value="cpf">CPF</option>
                                                 <option value="email">E-mail</option>
                                                 <option value="phone">Telefone</option>
+                                                <option value="aleatoria">Chave aleatória</option>
                                             </select>
                                             <app-error-msg [control]="form.get('tipoChavePix')"></app-error-msg>
                                         </div>
                                     </div>
-                                    <div class="mt-3" *ngIf="form.get('tipoChavePix').value !== '0'">
+                                    <div class="mt-3" *ngIf="form.get('tipoChavePix').value !== '0' && labelChavePix !== ''">
                                         <div class="form-group">
                                             <label for="clienteChavePix" id="labelChavePix" class="text-left">{{ labelChavePix }}</label>
                                             <input type="text" id="clienteChavePix" class="form-control inverted-out"
