--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -379,7 +379,7 @@
                                 <span>
                                     <i class="fa fa-solid fa-gift"></i>
                                 </span>
-                                {{'geral.rollover' | translate}}
+                                {{'geral.promocoes' | translate}}
                                 <span class="arrow-nav">
                                     <i class="fa-solid fa-angle-right"></i>
                                 </span>
