--- a/src/app/clientes/promocao/promocao.component.css
+++ b/src/app/clientes/promocao/promocao.component.css
@@ -1,10 +1,10 @@
 .tabs {
-    border-bottom: 3px solid var(--foreground);
+    border-bottom: 2px solid var(--foreground);
     margin-bottom: 30px;
 }
 
 .tabs a {
-    font-size: 14px;
+    font-size: 12px;
     color: var(--foreground);
     text-decoration: none;
     display: inline-block;
@@ -20,7 +20,7 @@
 
 .tabs a.active {
     color: var(--highlight);
-    border-bottom: 3px solid var(--highlight);
+    border-bottom: 2px solid var(--highlight);
 }
 
 .tabs a:hover .circle,
@@ -128,7 +128,7 @@
 
 .info-page-promotion {
     margin-top: 16px;
-    margin-bottom: 36px;
+    margin-bottom: 7px;
 }
 
 .rodada-gratis-container {
@@ -140,12 +140,11 @@
 }
 .info-rodada {
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 400;
 }
 
 .rodada-gratis-container .info-rodada span {
-    font-size: 12px;
-    font-weight: 400;
+    color: #B8B8B8;
 }
 
 .disabled-button {
@@ -154,11 +153,27 @@
 }
 
 .count-rodadas-mobile {
+    font-size: 12px;
     margin: 23px auto;
 }
 
 .icon-reorder {
     cursor: pointer;
+}
+
+@media only screen and (max-width: 834px) {
+    .tabs a {
+        width: 50%;
+        text-align: center;
+    }
+
+    .filtros {
+        margin-bottom: 25px;
+    }
+
+    .info-page-promotion {
+        margin-top: 0;
+    }
 }
 
 @media only screen and (max-width: 1024px) {
