--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -605,7 +605,7 @@ body .change-theme {
     }
 }
 
-@media only screen and (max-width: 1366px) {    
+@media only screen and (max-width: 1366px) and (min-width: 1280px){    
     .w-130 {
         width: 103px;
     }
