texto de acordo com a promoção

--- a/src/app/shared/layout/welcome-page/welcome-page.component.html
+++ b/src/app/shared/layout/welcome-page/welcome-page.component.html
@@ -10,8 +10,14 @@
         <div style="font-size: 14px; font-weight: 400; margin-top: 32px;">
             <div *ngIf="!validEmail; else textValid">
                 <p>Seu cadastro foi realizado com sucesso! <span class="emoji-icon">🎉🎉</span></p>
-                <p style="display: inline-block; max-width: 440px; padding: 0 16px;">Faça seu depósito agora mesmo e não perca a oportunidade 
-                de ganhar bônus de 100% no seu primeiro depósito</p>
+                <ng-container *ngIf="booleanPromoPrimeiroDepositoAtivo">
+                    <p style="display: inline-block; max-width: 440px; padding: 0 16px;">Faça seu depósito agora mesmo e não perca a oportunidade 
+                        de ganhar bônus de 100% no seu primeiro depósito</p>
+                </ng-container>
+                <ng-container *ngIf="!booleanPromoPrimeiroDepositoAtivo">
+                    <p style="display: inline-block; max-width: 440px; padding: 0 16px;">Não perca tempo! Realize agora mesmo seu primeiro depósito 
+                        e comece a desfrutar do que a nossa banca tem de melhor a oferecer.</p>
+                </ng-container>
             </div>
             <ng-template #textValid>
                 <div>
