--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -37,12 +37,17 @@
                                     </div>
                                     <div class="mt-3">
                                         <div class="form-group">
-                                            <select formControlName="tipoChavePix" class="form-control inverted-out" (change)="onChavePixChange()">
-                                                <option value="0" [selected]="true" disabled>{{'geral.selecioneChavePix' | translate}}</option>
-                                                <option value="cpf">CPF</option>
-                                                <option value="email">E-mail</option>
-                                                <option value="phone">Telefone</option>
-                                                <option value="aleatoria">Chave aleatória</option>
+                                            <select class="form-control inverted-out" formControlName="tipoChavePix" (change)="onChavePixChange()">
+                                                <ng-container *ngIf="!permitirQualquerChavePix; else optionsPix">
+                                                    <option value="cpf" selected>CPF</option>
+                                                </ng-container>
+                                                <ng-template #optionsPix>
+                                                    <option value="0" [selected]="true" disabled>{{'geral.selecioneChavePix' | translate}}</option>
+                                                    <option value="cpf">CPF</option>
+                                                    <option value="email">E-mail</option>
+                                                    <option value="phone">Telefone</option>
+                                                    <option value="random">Chave aleatória</option>
+                                                </ng-template>
                                             </select>
                                             <app-error-msg [control]="form.get('tipoChavePix')"></app-error-msg>
                                         </div>
@@ -51,7 +56,6 @@
                                         <div class="form-group">
                                             <label for="clienteChavePix" id="labelChavePix" class="text-left">{{ labelChavePix }}</label>
                                             <input type="text" id="clienteChavePix" class="form-control inverted-out"
-                                                    [ngClass]="applyCssInputError('clienteChavePix')"
                                                     formControlName="clienteChavePix"
                                                     [mask]="getMask()"
                                                     [readonly]="form.get('tipoChavePix').value == 'cpf'">
