Alterando frase explicativa do bônus na modalidade de primeiro deposito, no modal de regras

--- a/src/app/shared/layout/modals/regras-bonus-modal/regras-bonus-modal.component.html
+++ b/src/app/shared/layout/modals/regras-bonus-modal/regras-bonus-modal.component.html
@@ -44,8 +44,8 @@
                         </li>
                    </ng-container>
                     <li>
-                        O valor total de bônus deve ser apostado {{promocao.multiplicador}}
-                        vezes na modalidade {{promocao.bonusModalidade}}. As apostas colocadas em esportes virtuais não se encontram elegíveis para efeitos do cumprimento dos requisitos de bônus. Por exemplo, em um depósito com bônus de R$50, você terá que fazer R${{promocao.multiplicador * 50}}
+                        O valor total do bônus, somado ao valor do depósito deverá ser apostado {{promocao.multiplicador}}
+                        vezes na modalidade {{promocao.bonusModalidade}}. As apostas colocadas em esportes virtuais não se encontram elegíveis para efeitos do cumprimento dos requisitos de bônus. Por exemplo, em um depósito com bônus de R$50, você terá que fazer R${{promocao.multiplicador * 100}}
                         em apostas na modalidade {{promocao.bonusModalidade}}.
                     </li>
                     <li>
