--- a/src/app/promocoes/promocao.component.css
+++ b/src/app/promocoes/promocao.component.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     background-color: var(--background);
-    color: var(--foreground-header);
+    color: var(--foreground-sidebars);
     position: absolute;
     min-height: 100vh;
 }
@@ -48,6 +48,7 @@
 .custom-card .card-body {
     padding: 18px;
     background-color: var(--header);
+    color: ;
     height: 50%;
     display: flex;
     flex-direction: column;
