--- a/src/app/promocoes/promocao.component.css
+++ b/src/app/promocoes/promocao.component.css
@@ -2,7 +2,6 @@
     padding: 0;
     margin: 0;
     background-color: var(--background);
-    color: var(--foreground-sidebars);
     position: absolute;
     min-height: 100vh;
 }
@@ -14,6 +13,7 @@
     overflow: scroll;
     display: flex;
     flex-direction: column;
+    color: var(--foreground-inputs-odds);
 }
 .loading-listagem .item-sample {
     border-radius: 5px;
