--- a/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.css
+++ b/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.css
@@ -23,10 +23,27 @@
 
 .desktop-image {
     margin: 32px 16px 24px 16px;
+    max-width: 100%;
+    height: auto;
+    width: auto;
 }
+
 .desktop-image img {
-    border-radius: 10px;
-    height: 320px;
+    display: block;
+    max-width: 100%;
+    height: auto;
+    border-radius: 4px;
+}
+
+@media only screen and (min-width: 1919px) {
+    .desktop-image img {
+        max-height: 60vh;
+    }
+}
+@media only screen and (max-width: 600px) {
+    .desktop-image img {
+        max-height: 22vh;
+    }
 }
 
 @media (max-width: 821px) {
@@ -47,12 +64,6 @@
     }
 }
 
-@media (max-width: 820px) {
-    .desktop-image img {
-        height: 222px;
-    }
-}
-
 @media (max-width: 485px) {
     .content,
     .content-header {
@@ -65,12 +76,11 @@
 
     .desktop-image img {
         border-radius: 4px;
+        height: 20vh;
     }
-
     .desktop-image {
         margin: 14px 8px 24px 8px;
     }
-
     .content  {
         margin-bottom: 50px;
     }
