--- a/src/app/promocoes/promocao.component.css
+++ b/src/app/promocoes/promocao.component.css
@@ -42,7 +42,6 @@
     position: relative;
 }
 .custom-card img {
-    height: 100%;
     border-radius: 3px 3px 0 0;
 }
 .custom-card .card-body {
@@ -85,6 +84,17 @@
     height: 355px;
 }
 
+.card-image img {
+    height: auto;  
+    width: 100%;
+    max-height: 100%; 
+    display: block;
+}
+
+.custom-card .card-image {
+    height: 50%;
+}
+
 @media screen and (max-width: 1440px) and (min-width: 1366px) {
     .custom-card {
         width: 453px;
@@ -108,9 +118,14 @@
         height: 360px;
         margin-right: 17px;
     }
-
     .custom-card .card-body {
-        padding-top: 29px;
+        padding-top: 20px;
+    }
+    .custom-card .card-image {
+        height: 53%;
+    }
+    .custom-card .card-body {
+        height: 47%;
     }
 }
 
