--- a/src/app/promocoes/promocao.component.html
+++ b/src/app/promocoes/promocao.component.html
@@ -16,7 +16,7 @@
     <div class="cards-container">
         <ng-container *ngFor="let promocao of promocoes">
             <div class="custom-card" (click)="goToDetails(promocao.id, true)">
-                <div class="card-image" style="height: 50%;">
+                <div class="card-image">
                     <div class="logo-game-background" *ngIf="promocao.modalidade">
                         <span>{{ promocao.modalidade == 'cassino' ? 'Cassino' : 'Esportivo' }}</span>
                     </div>
