--- a/src/app/clientes/indique-ganhe/indique-ganhe.component.html
+++ b/src/app/clientes/indique-ganhe/indique-ganhe.component.html
@@ -154,7 +154,7 @@
                                 <td>{{ 'indique_ganhe.voceIndicou' | translate }} {{ indicado.nome_indicado }}</td>
                                 <td>{{ 'data.dataHora' | translate:{'data': indicado.indicado_em.data, 'hora': indicado.indicado_em.hora} }}</td>
                                 <td>
-                                    <div 
+                                    <div
                                         class="progress-container"
                                         [ngClass]="setProgressFillClass(indicado)"
                                     >
@@ -177,10 +177,10 @@
                                     }"
                                 >{{ indicado.valor_comissao | currency }}<br><span [ngStyle]="{'color': '#6A6868'}">({{ translateTipoSaldo(indicado.tipo_saldo) }})</span></td>
                                 <td id="td-btn-redeem" [ngStyle]="{'text-align': 'center'}">
-                                    <button 
+                                    <button
                                         id="btn-redeem"
-                                        class="btn btn-custom" 
-                                        type="button" 
+                                        class="btn btn-custom"
+                                        type="button"
                                         [disabled]="indicado.status != 'resgate'"
                                         (click)="indicado.status == 'resgate' ? redeemCommission(indicado.comissao_id) : false"
                                         >{{'indique_ganhe.resgatar' | translate}}</button>
@@ -204,7 +204,7 @@
                             <p>{{ 'indique_ganhe.dataDeCadastro' | translate }} {{ 'data.dataHora' | translate:{'data': indicado.indicado_em.data, 'hora': indicado.indicado_em.hora} }}</p>
                             <p [ngStyle]="{'font-size': '14px'}">{{ 'indique_ganhe.voceIndicou' | translate }} {{ indicado.nome_indicado }}</p>
                             <p [ngStyle]="{'color': setAmountColor(indicado.status)}">
-                                {{ indicado.valor_comissao | currency }} 
+                                {{ indicado.valor_comissao | currency }}
                                 <span [ngStyle]="{'color': '#6A6868'}">({{ translateTipoSaldo(indicado.tipo_saldo) }})</span>
                             </p>
                             <p>
@@ -231,7 +231,7 @@
             <i class="fa fa-times"></i>
         </a>
     </div>
-    <div class="modal-body" style="min-height: 80%">
+    <div class="modal-body">
         <p>
             {{'regras_indique_ganhe.primeiro_paragrafo_um' | translate:{'valorGanhoPorIndicacao': valorGanhoPorIndicacao, 'tipoSaldoGanho': tipoSaldoGanhoModalRegras()} }}
             <br>
@@ -286,7 +286,7 @@
                             {{ formatDateModal(indicadoSelecionado.comissionado_em.data_hora) }}
                         </span>
                         <span *ngIf="indicadoSelecionado.status == 'pago'">{{ 'indique_ganhe.seuSaldoDepositado' | translate }}</span>
-                        <span 
+                        <span
                             [ngStyle]="{'color': setAmountColor(indicadoSelecionado.status)}"
                             *ngIf="indicadoSelecionado.status == 'pago'"
                         >{{ indicadoSelecionado.valor_comissao | currency }}</span>
@@ -333,10 +333,10 @@
             </ul>
         </div>
         <div [ngStyle]="{'position': 'absolute', 'left': '0', 'bottom': '12px', 'width': '100%', 'display': 'flex', 'justify-content': 'center'}">
-            <button 
-                class="btn btn-custom" 
+            <button
+                class="btn btn-custom"
                 type="button"
-                [ngStyle]="{'width': '95%'}" 
+                [ngStyle]="{'width': '95%'}"
                 [disabled]="indicadoSelecionado.status != 'resgate'"
                 (click)="indicadoSelecionado.status == 'resgate' ? redeemCommission(indicadoSelecionado.comissao_id) : false"
                 >{{'indique_ganhe.resgatar' | translate}}</button>
