--- a/src/app/auth/resetar-senha/resetar-senha.component.html
+++ b/src/app/auth/resetar-senha/resetar-senha.component.html
@@ -1,4 +1,4 @@
-<div id="default-content">
+<div id="default-content" [ngClass]="indiqueGanheRemovido == false ? 'ajusta-botao-alterar-senha' : ''">
     <div class="content-body">
         <div class="content">
             <div class="row">
