--- a/src/app/casino/gameview/gameview.component.html
+++ b/src/app/casino/gameview/gameview.component.html
@@ -13,7 +13,7 @@
                 <a *ngIf="!fullscreen" class="btn-cassino screen-adjust" (click)="openFullscreen()"><i class="fa fa-expand"></i></a>
                 <a *ngIf="fullscreen" class="btn-cassino screen-adjust" (click)="closeFullscreen()"><i class="fa fa-compress"></i></a>
             </ng-container>
-            <a *ngIf="gameFornecedor !== 'parlaybay'" (click)="back()" class="btn-cassino game-close"><i class="fa fa-times"></i></a>
+            <a (click)="back()" class="btn-cassino game-close"><i class="fa fa-times"></i></a>
         </div>
     </div>
     <ng-container>
