--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -607,6 +607,21 @@
                 <span>{{'menu.esportes' | translate}}</span>
             </a>
         </div>
+        <ng-container *ngIf="isLoggedIn">
+            <div style="cursor: pointer" class="category" *ngIf="parlaybayAtivo">
+                <a [routerLink]="['/casino/pb/play/real/170000/parlaybay']" routerLinkActive="active">
+                    <span>PARLAYBAY</span>
+                </a>
+            </div>
+        </ng-container>
+        <ng-container *ngIf="!isLoggedIn">
+            <div style="cursor: pointer" class="category" *ngIf="parlaybayAtivo">
+                <a (click)="abrirLogin()" routerLinkActive="active">
+                    <span>PARLAYBAY</span>
+                </a>
+            </div>
+        </ng-container>
+
         <div class="category" *ngIf="cassinoAtivo">
             <a [ngClass]="activeMenuCassino()" [routerLink]="['/casino/c']">
                 <span>{{'menu.cassino' | translate}}</span>
@@ -622,11 +637,7 @@
                 <span>{{'menu.virtuais' | translate}}</span>
             </a>
         </div>
-        <div style="cursor: pointer" class="category" *ngIf="parlaybayAtivo">
-            <a (click)="iniciarParlaybay()" routerLinkActive="active">
-                <span>PARLAYBAY</span>
-            </a>
-        </div>
+
         <div class="category" *ngIf="desafioHabilitado">
             <a [routerLink]="['/desafios']" routerLinkActive="active">
                 <span>{{'menu.desafio' | translate}}</span>
