Sorteio  * Listagem de Rifas  * Bilhete Rifa  * Listagem de Apostas Rifa

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -637,6 +637,11 @@
                 <span>{{'menu.loteria' | translate}}</span>
             </a>
         </div>
+        <div class="category" >
+            <a [routerLink]="['/rifas']" routerLinkActive="active">
+                <span>{{'menu.rifas' | translate}}</span>
+            </a>
+        </div>
         <div class="category" *ngIf="paginaPromocaoHabilitado">
             <a [routerLink]="['/promocao']" routerLinkActive="active">
                 <span>{{'menu.promocao' | translate}}</span>
