--- a/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.css
+++ b/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.css
@@ -69,7 +69,7 @@
 
     .desktop-image img {
         border-radius: 4px;
-        height: 20vh;
+        height: 105px;
     }
     .desktop-image {
         margin: 14px 8px 24px 8px;
