--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -65,8 +65,8 @@ iframe{
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 51px;
-    margin-bottom: 12px;
+    /* height: 51px; */
+    /* margin-bottom: 12px; */
     border: 1px solid #1B1B1B;
 }
 
@@ -146,7 +146,7 @@ iframe{
     }
 
     .game-view .header-game-view {
-        margin: 2% 0 0 0 ;
+        /* margin: 2% 0 0 0 ; */
     }
 
     .game-frame {
